[package]
name = "tmux-session-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.19"
rust_fzf = "0.1.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
