[package]
name = "tmux-session-manager"
version = "0.2.1"
edition = "2021"
authors = ["Camilo Romero <camiloaromero23@gmail.com>"]
description = "A tmux session manager which uses fzf to select from both active and configured sessions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/camiloaromero23/tmux-session-manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.19"
rust_fzf = "0.1.2"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
