[package]
name = "tmux-session-manager"
version = "0.4.3"
edition = "2021"
authors = ["Camilo Romero <camiloaromero23@gmail.com>"]
description = "A tmux session manager which uses fzf to select from both active and configured sessions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/camiloaromero23/tmux-session-manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
itertools = "0.14.0"
log = "0.4.26"
rust_fzf = "0.3.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
